# Snakey

./: CMakeLists.txt  README.md
doc/: README.md
src/: Fruit.cc  Fruit.hpp  Game.cc  Game.hpp  Snake.cc  Snake.hpp  main.cc
